[package]
name = "rust_act"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    "lex_parse",
    "act_fmt",
]

[[bin]]
name = "act-fmt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lex_parse = { path = "lex_parse" }
act_fmt = { path = "act_fmt" }
ariadne = "0.1.2"
clap = { version = "3.1.12", features = ["derive"] }

nom = "7"
nom-supreme = "0.6.0"

[profile.release]
lto = true
strip = true
