[package]
name = "rust_act"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "lex_parse",
    "act_fmt",
    "symantics"
]

[[bin]]
name = "act-fmt"
path = "bin/act_fmt.rs"

[[bin]]
name = "act-pp"
path = "bin/act_pp.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.2"
clap = { version = "3.1.12", features = ["derive"] }
act_fmt = { path = "act_fmt" }
lex_parse = { path = "lex_parse" }
symantics = { path = "symantics" }

[profile.release]
debug = true
#lto = true
#strip = true
